--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a{
     
   }
   .button{
-    background-color:black ;
+    background-color:transparent ;
     color: white;
     padding: 5px;
     border-radius: 0;
