--- a/style.css
+++ b/style.css
@@ -423,6 +423,10 @@ a{
   #img5.project-img{
     background-image: url("image/Project_image_5.png");
   }
+
+#img6.project-img{
+    background-image: url("image/Project_image_6.png");
+}
 .project-right{
   height:100%;
   width:30%;
